--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -330,34 +330,33 @@
     "    \"\"\"\n",
     "    Create k-fold splits for the dataset while maintaining class distribution\n",
     "    \"\"\"\n",
-    "    # Đọc dữ liệu\n",
     "    df = pd.read_csv(csv_path)\n",
     "    \n",
-    "    # Chuyển đổi label từ A,B,C,D sang 0,1,2,3\n",
+    "    # mapping\n",
     "    label_map = {'A': 0, 'B': 1, 'C': 2, 'D': 3}\n",
     "    df['Label_num'] = df['Label'].map(label_map)\n",
     "    \n",
-    "    # Khởi tạo StratifiedKFold\n",
+    "    # define StratifiedKFold\n",
     "    skf = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=random_state)\n",
     "    \n",
-    "    # Thêm cột fold\n",
+    "    # add fold\n",
     "    df['fold'] = -1\n",
     "    \n",
-    "    # Thực hiện split dựa trên Label để đảm bảo phân phối class\n",
+    "    # split on label for class distribution\n",
     "    for fold, (train_idx, val_idx) in enumerate(skf.split(df, df['Label_num'])):\n",
     "        df.loc[val_idx, 'fold'] = fold\n",
     "    \n",
-    "    # Lưu các file cho từng fold\n",
+    "    # save fold\n",
     "    base_path = os.path.dirname(csv_path)\n",
     "    filename = os.path.basename(csv_path).split('.')[0]\n",
     "    \n",
     "    for fold in range(n_splits):\n",
-    "        # Train data cho fold hiện tại\n",
+    "        # train data for current fold\n",
     "        train_df = df[df['fold'] != fold].copy()\n",
-    "        # Validation data cho fold hiện tại\n",
+    "        # validation data for current fold\n",
     "        val_df = df[df['fold'] == fold].copy()\n",
     "        \n",
-    "        # Lưu files với format Patient,Label\n",
+    "        # save files as patient, label\n",
     "        train_df[['Patient', 'Label']].to_csv(\n",
     "            os.path.join(base_path, f'{filename}_fold{fold}_train.csv'), \n",
     "            index=False\n",
@@ -367,14 +366,14 @@
     "            index=False\n",
     "        )\n",
     "        \n",
-    "        # In thống kê phân phối class cho mỗi fold\n",
+    "        # print class distribution for each fold\n",
     "        print(f\"\\nFold {fold} distributions:\")\n",
     "        print(\"\\nTrain set distribution:\")\n",
     "        print(train_df['Label'].value_counts(normalize=True))\n",
     "        print(\"\\nValidation set distribution:\")\n",
     "        print(val_df['Label'].value_counts(normalize=True))\n",
     "    \n",
-    "    # Lưu file gốc có thêm cột fold\n",
+    "    # save origin file with fold\n",
     "    df.to_csv(os.path.join(base_path, f'{filename}_with_folds.csv'), index=False)\n",
     "    \n",
     "    return df\n",
